FMZ-46 Refactored `PlayerMainView.java` for improved configuration and service initialization. Updated `Database` logging for clearer debug information.